fix: video container top/bottom spacing

--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -2,11 +2,15 @@
   --video-aspect-ratio: 16 / 9;
 }
 
+.section.video-container {
+  padding: 6% 0 4%;
+}
+
 .video.block {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 6% 0;
+  padding: 0;
 }
 
 .video.block > div {
